language/move-lang/tests/move_check/expansion/duplicate_field.exp
error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/expansion/duplicate_field.move:4:9
  │
3 │         f: u64,
  │         - Field previously defined here
4 │         f: u64,
  │         ^ Duplicate definition for field 'f' in struct 'S'

